RENO-1741 - fix arrow alignment on "back to list" anchor

--- a/src/components/location-finder/Locations/Locations.scss
+++ b/src/components/location-finder/Locations/Locations.scss
@@ -72,6 +72,10 @@
       display: none;
       visibility: hidden;
     }
+
+    .more-link__icon {
+      line-height: 1;
+    }
   }
 
   @include breakpoint($breakpoint-medium) {
